# vegan-recipes

./: .gitignore  README.md  main.py  pyproject.toml
database/: crud.py  db.py
middlewares/: auth.py  cors.py
models/: recipe.py  user.py
routes/: login.py  recipes.py  users.py
