[tool.poetry]
name = "vegan-recipes"
version = "0.1.0"
description = ""
authors = ["Michael Jordan <mjthecoder53161@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.1"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
